--- a/sections/custom-featured-collection.liquid
+++ b/sections/custom-featured-collection.liquid
@@ -89,7 +89,7 @@ button{{ 'custom-featured-collection.css' | asset_url | stylesheet_tag }}
 
 
     {%- if section.settings.show_view_all and more_in_collection -%}
-      <div class="">
+      <div class="p_view-all">
         <a href="{{ section.settings.collection.url }}" class="">
           {{ 'sections.featured_collection.view_all' | t }}
         </a>
