add: added presets to custom featured collection

--- a/sections/custom-featured-collection.liquid
+++ b/sections/custom-featured-collection.liquid
@@ -175,7 +175,8 @@ button{{ 'custom-featured-collection.css' | asset_url | stylesheet_tag }}
     ],
     "presets": [
       {
-        "name": "t:sections.featured-collection.presets.name"
+        "name": "custom-featured-collection",
+        "category": "Custom Featured Collection"
       }
     ]
   }
