mod: update preset

--- a/sections/custom-featured-collection.liquid
+++ b/sections/custom-featured-collection.liquid
@@ -100,7 +100,7 @@ button{{ 'custom-featured-collection.css' | asset_url | stylesheet_tag }}
 
 {% schema %}
   {
-    "name": "Custom Featured Collection",
+    "name": "t:sections.featured-collection.name",
     "tag": "section",
     "class": "section",
     "settings": [
