mod: update preset v3

--- a/sections/custom-featured-collection.liquid
+++ b/sections/custom-featured-collection.liquid
@@ -175,8 +175,8 @@ button{{ 'custom-featured-collection.css' | asset_url | stylesheet_tag }}
     ],
     "presets": [
       {
-        "name": "custom-featured-collection",
-        "category": "Custom Featured Collection"
+        "name": "Custom Featured Collection",
+        "category": "Custom"
       }
     ]
   }
