--- a/sections/custom-featured-collection.liquid
+++ b/sections/custom-featured-collection.liquid
@@ -1,12 +1,11 @@
-title
+<!-- title
 collection - (swiper)
-  title
-  image
-  price
-  link
-button{{ 'custom-featured-collection.css' | asset_url | stylesheet_tag }}
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
-<script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+title
+image
+price
+link
+button-->
+{{ 'custom-featured-collection.css' | asset_url | stylesheet_tag }}
 
 {%- if section.settings.enable_quick_add -%}
   <link
@@ -71,13 +70,15 @@ button{{ 'custom-featured-collection.css' | asset_url | stylesheet_tag }}
       <div class="swiper-wrapper">
         <!-- Slides -->
         {%- for product in section.settings.collection.products limit: section.settings.products_to_show -%}
-        <div class="swiper-slide">
-          <div>
-            <img src="{{ product.featured_media }}"/>
-            {{ product.title }}
-            {{ product.price }}
+          <div class="swiper-slide">
+            <div class="swiper-slide-content">
+              <img src="{{ product.featured_media | image_url }}" class="swiper-slide-img"/>
+              <h2 class="swiper-slide-title">{{ product.title }}</h2>
+              <div class="swiper-slide-price-container">
+                <span class="swiper-slide-price-content">{{ product.price }}</span>
+              </div>
+            </div>
           </div>
-        </div>
         {%- endfor -%}
       </div>
 
@@ -183,8 +184,9 @@ button{{ 'custom-featured-collection.css' | asset_url | stylesheet_tag }}
 {% endschema %}
 
 <script>
-  $(document).ready(function(){
+  $(document).ready(function() {
     const swiper = new Swiper('.swiper')
-    // Optional parameters
+
+// Optional parameters
   })
 </script>
